updated outline view

--- a/bundles/org.eclipse.jdt.doc.user/book.css
+++ b/bundles/org.eclipse.jdt.doc.user/book.css
@@ -114,3 +114,4 @@ div.copyright { margin-top: 3em }
 
 .Filename {  font-style: italic}
 .Label {  font-weight: bold}
+.Note { font-style: italic }
