--- a/bundles/org.eclipse.jdt.doc.user/book.css
+++ b/bundles/org.eclipse.jdt.doc.user/book.css
@@ -115,3 +115,7 @@ div.copyright { margin-top: 3em }
 .Filename {  font-style: italic}
 .Label {  font-weight: bold}
 .Note { font-style: italic }
+
+div.copyright img { border-width: 0px }
+
+kbd { font-weight: bold }
