--- a/bundles/org.eclipse.jdt.doc.user/book.css
+++ b/bundles/org.eclipse.jdt.doc.user/book.css
@@ -27,12 +27,12 @@ table {
   font-size: 10pt;
 }
 
-
 th {
   font-weight: bold;
 }
 
 kbd {
+  font-family: monospace;
   font-weight: bold;
 }
 
@@ -40,7 +40,18 @@ var {
   font-style: italic;
 }
 
-
 ol {
   margin-bottom: 1em;
+}
+
+span.control {
+  font-weight: bold;
+}
+
+span.name {
+  font-style: italics;
+}
+
+span.code {
+  font-family: monospace;
 }
