43227  Munged extension point reference doc

--- a/bundles/org.eclipse.platform.doc.isv/schema.css
+++ b/bundles/org.eclipse.platform.doc.isv/schema.css
@@ -13,16 +13,28 @@ H6.CaptionFigColumn#copyright-text {
 P.Code#dtd {
 	color: #800000; 
 	display: inline;
+	margin-top: 0.000000pt;
+	margin-bottom: 0.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 0.000000pt;
 }
 
 P.Code#tag {
 	color: #000080; 
 	display:inline;
+	margin-top: 0.000000pt;
+	margin-bottom: 0.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 0.000000pt;
 }
 
 P.Code#cstring {
 	color: #008000; 
 	display:inline;
+	margin-top: 0.000000pt;
+	margin-bottom: 0.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 0.000000pt;	
 }
 
 
