*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/schema.css
+++ b/bundles/org.eclipse.platform.doc.isv/schema.css
@@ -3,11 +3,15 @@ H6.CaptionFigColumn#header {
 	display:inline
 }
 
-H6.CaptionFigColumn#copyright-text {
+P.Note#copyright {
 	font-size: smaller; 
 	font-style: normal;
 	color: #336699; 
-	display:inline 
+	display:inline;
+	margin-top: 3.000000pt;
+	margin-bottom: 11.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 0.000000pt;
 }
 
 P.Code#dtd {
