*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/schema.css
+++ b/bundles/org.eclipse.platform.doc.isv/schema.css
@@ -16,11 +16,18 @@ P.Note#copyright {
 
 P.Code#dtd {
 	color: #800000; 
-	display: inline;
 	margin-top: 0.000000pt;
 	margin-bottom: 0.000000pt;
 	margin-right: 0.000000pt;
-	margin-left: 0.000000pt;
+	margin-left: 10.000000pt;
+}
+
+P.Code#dtdAttlist {
+	color: #800000; 
+	margin-top: 0.000000pt;
+	margin-bottom: 0.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 20.000000pt;
 }
 
 P.Code#tag {
@@ -41,6 +48,19 @@ P.Code#cstring {
 	margin-left: 0.000000pt;	
 }
 
+.ConfigMarkup#elementDesc {
+	color: black;
+	margin-top: 0.000000pt;
+	margin-bottom: 0.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 10.000000pt;
+}
 
- 
+.ConfigMarkup#attlistDesc {
+	color: black;
+	margin-top: 0.000000pt;
+	margin-bottom: 0.000000pt;
+	margin-right: 0.000000pt;
+	margin-left: 32.000000pt;
+}
 
